# nqueens

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  flake.nix
src/: CMakeLists.txt  array_queens.cpp  bit_queens.cpp  dlx_queens.cpp  flat_queens.cpp  nqueens.h  super_queens.cpp  thread_queens.cpp
test/: CMakeLists.txt  benchmarks.cpp  unittests.cpp
